<resources>
    <string name="app_name">RSHulpApplicatie</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings relatedactivity_loginogin -->
    <string name="prompt_email">Email</string>
    <string name="prompt_logout">Logout</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_sign_up_long">Create user</string>
    <string name="action_enter_user">Enter username</string>
    <string name="action_enter_item">Enter item</string>
    <string name="action_search">Search</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_not_match">Password does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="not_logged_out">Not logged out from last time</string>
    <string name="error_user_exists">Email is already in use</string>
    <string name="action_user_created">Account Successfully Created</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="member_true">Yes</string>
    <string name="member_false">No</string>
    <string name="error_player_not_found">Player not found, try another username</string>
    <string name="error_item_not_found">Item not found, try another item</string>
    <string name="error_email_or_password">Email or Password does not match</string>
    <string name="action_choosen_skill">The skill you choose is </string>
    <string name="success_login">Congrats: Login Successfull</string>
    <string name="grand_exchange">Grand Exchange</string>
    <string name="highscore">Highscore</string>
    <string name="money">Money Guides</string>
    <string name="action_ge_name">Name: \n</string>
    <string name="action_ge_member">Member: \n</string>
    <string name="action_ge_price">Price: \n</string>
    <string name="action_ge_change">Change: \n</string>
    <string name="action_money_name">Name: \n</string>
    <string name="action_money_Requirement">Requirement: \n</string>
    <string name="action_money_price">Money needed: \n</string>
    <string name="action_money_sell">Sell price: \n</string>
    <string name="action_money_profit">profit: \n</string>
    <string name="action_logout">Logged out</string>
    <string name="action_choose_skill">Choose the skill which you want to make money with</string>
    <string name="title_activity_highscore_osrstabbed">HighscoreOSRSTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_osrshighscore">OSRSHighscoreActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
