<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context="com.example.thibaut.rshulpapplicatie.OSRSMenuActivity"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/rs3_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:weightSum="3">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/highscore"
            android:layout_weight="1"
            android:id="@+id/HighscoreRS3"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/grand_exchange"
            android:layout_weight="1"
            android:id="@+id/GERS3"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/money"
            android:layout_weight="1"
            android:id="@+id/MoneyRS3"/>
    </LinearLayout>

</RelativeLayout>
