<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50pt"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:background="#0F1A22">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:weightSum="2">
            <TextView
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/action_ge_name"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/ItemMember"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/action_ge_member"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2"
           android:weightSum="2">
        <TextView
            android:id="@+id/ItemPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/action_ge_price"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/ItemChange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/action_ge_change"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>